<resources>
    <string name="app_name">Velocity Recorder</string>
    <string name="title_home">Dashboard</string>
    <string name="title_history">History</string>
    <string name="loading">Loading ...</string>
    <string name="notif_title">Velocity Recorder Running</string>
    <string name="notif_text">Keep the app open for GPS related measurement</string>
    <string name="avg_velocity_text">Avg velocity</string>
    <string name="avg_velocity_value">0 km/h</string>
    <string name="max_velocity_text">Max velocity</string>
    <string name="max_velocity_value">0 km/h</string>
    <string name="chart_title">Velocity (km/h) vs Time (mm:ss)</string>
    <string name="distance_text">Distance</string>
    <string name="distance_value">0 km</string>
    <string name="start_text">Start</string>
    <string name="to_text">to</string>
    <string name="end_text">End</string>
    <string name="time_text">Time</string>
    <string name="time_value">00:00</string>
    <string name="start_button">start button</string>
    <string name="stop_button">stop button</string>
    <string name="map_title">Map View</string>
    <string name="map_description">map view of the ride</string>
</resources>