<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ride_detail.RideDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_baseline_left_arrow_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_baseline_delete_24" />

            <ImageView
                android:id="@+id/export_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_export_24" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="24sp"
            android:textColor="@color/purple_500" />

        <TextView
            android:id="@+id/to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to_text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/end_text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="24sp"
            android:textColor="@color/purple_500" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:textAlignment="center"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_baseline_timer_24"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_value"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distance_text"
                android:textAlignment="center"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_baseline_square_foot_24"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distance_value"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/purple_500" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/avg_velocity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/avg_velocity_text"
                android:textAlignment="center"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_baseline_speedometer_medium_24"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/avg_velocity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/avg_velocity_value"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/max_velocity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_velocity_text"
                android:textAlignment="center"
                android:drawablePadding="8dp"
                app:drawableStartCompat="@drawable/ic_baseline_speedometer_fast_24"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/max_velocity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_velocity_value"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/purple_500" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="28dp" >

    <TextView
        android:id="@+id/chart_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_title"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="260dp"/>

    </LinearLayout>

</LinearLayout>